# agentfile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MOTIVATION.md  README.md  SPEC.md  pyproject.toml
.github/: PR_v0.2.md
.github/ISSUE_TEMPLATE/: bug_report.yml  spec_proposal.yml
.github/workflows/: ci.yml
examples/coding-helper/: agent.yaml
examples/data-pipeline/: agent.yaml
examples/data-pipeline/prompts/: system.md
examples/research-agent/: agent.yaml
examples/research-agent/prompts/: system.md
schema/: agentfile.v1.schema.json
skills/agentfile/: SKILL.md
skills/agentfile/references/: authoring.md  debugging.md  schema-quick-ref.md
src/agentfile/: __init__.py  __main__.py  cli.py  errors.py  loader.py  review.py  validator.py
src/agentfile_mcp/: __init__.py  server.py
tests/: test_cli.py  test_loader.py  test_mcp_server.py  test_review.py  test_validator.py
tests/fixtures/: invalid_custom_no_endpoint.yaml  invalid_metadata.yaml  invalid_missing_spec.yaml  valid_full.yaml  valid_minimal.yaml  warns_secret.yaml
