[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentfile"
version = "0.2.0"
description = "A portable, declarative format for sharing AI agent setups."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Sumanth Varma" }
]
keywords = ["ai", "agents", "llm", "mcp", "anthropic", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "types-jsonschema",
]
mcp = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/SumanthVarma798/agentfile"
Documentation = "https://github.com/SumanthVarma798/agentfile/blob/main/SPEC.md"
Issues = "https://github.com/SumanthVarma798/agentfile/issues"

[project.scripts]
agent = "agentfile.cli:main"
agentfile-mcp = "agentfile_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentfile", "src/agentfile_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"schema/agentfile.v1.schema.json" = "agentfile/_schema/agentfile.v1.schema.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/agentfile",
    "schema",
    "SPEC.md",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
